--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,10 @@ Django >= 2.2, < 2.3
 mysqlclient
 requests
 python-memcached
-Pysocks
 
-celery == 4.3.0
+celery >= 4.3, < 4.4
 django_celery_beat == 1.5.0
 django-import-export == 1.2.0
-telethon
 
 python-telegram-bot == 11.1.0
-
+telethon == 1.9.0
